force-app/main/default/objects/sked_Optimizer_Setting__c/sked_Optimizer_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Skedulo Optimizer Setting</label>
</CustomObject>