force-app/main/default/objects/sked_Optimizer_Setting__c/fields/sked_Primary_CO_Tag_Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_CO_Tag_Weighting__c</fullName>
    <defaultValue>1000</defaultValue>
    <inlineHelpText>Tag Weighting of Resource&#39;s Primary Collection Operation (1 - 1000)</inlineHelpText>
    <label>Primary CO Tag Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>