force-app/main/default/objects/sked_Optimizer_Setting__c/fields/sked_Resource_Tag_Min_Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Tag_Min_Weighting__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Resource Tag Min Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>