force-app/main/default/objects/sked_Optimizer_Setting__c/fields/sked_Secondary_CO_Tag_Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked_Secondary_CO_Tag_Weighting__c</fullName>
    <defaultValue>950</defaultValue>
    <inlineHelpText>Tag Weighting of Resource&#39;s Secondary Collection Operation (1 - 1000)</inlineHelpText>
    <label>Secondary CO Tag Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>