force-app/main/default/objects/sked_Optimizer_Setting__c/fields/sked_Seniority_Min_Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked_Seniority_Min_Weighting__c</fullName>
    <defaultValue>9000</defaultValue>
    <label>Seniority Min Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>